# PuffBlock

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt
common/: gl.c
engine/: filesys.cpp  filesys.hpp  indexbuf.cpp  indexbuf.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  texsys.cpp  texsys.hpp  vertexarray.cpp  vertexarray.hpp  vertexbuf.cpp  vertexbuf.hpp  vertexlayout.hpp  window.cpp  window.hpp
headers/glad/: gl.h
imgui/: imgui_impl_opengl3.cpp  main.cpp
shaders/: basic.pix  basic.vert  triangle.pix  triangle.pixel.glsl  triangle.vert  triangle.vertex.glsl
src/: Camera.hpp  Holder.cpp  Holder.hpp  chunk.cpp  chunk.hpp  imgui.cpp  imgui.hpp  input.cpp  input.hpp  main.cpp  shapes.cpp  shapes.hpp
